<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EkonomiAppen</string>
    <string name="action_settings">Settings</string>
    <string name="tvLoginInfo">Logga in eller skapa en ny användare nedan:</string>
    <string name="tvWelcome">Välkommen till EkonomiAppen! \n Den ultimata lösningen för dig som vill ha bättre koll på din ekonomi.</string>
    <string name="etFirstnameHint">Förnamn</string>
    <string name="etLastnameHint">Efternamn</string>
    <string name="rbLogin">Logga in</string>
    <string name="rbCreate">Skapa ny</string>
    <string name="btnCreate">Skapa</string>
    <string name="errorFirstName">Fyll i Förnamn</string>
    <string name="errorLastName">Fyll i Efternamn</string>
    <string name="errorFirstLastName">Fyll i Förnamn och Efternamn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnAddIncome">Lägg till inkomst</string>
    <string name="btnAddExpense">Lägg till utgift</string>
    <string name="btnOverview">Översikt</string>
    <string name="btnSeeIncome">Se inkomster</string>
    <string name="btnSeeExpenses">Se utgifter</string>
    <string name="tvMenuText">Tryck på knapparna nedan för att navigera dig runt i EkonomiAppen.</string>
    <string name="btnLogout">Logga ut</string>
    <string name="dateText">Datum: </string>
    <string name="titleText">Titel: </string>
    <string name="categoryText">Kategori: </string>
    <string name="amountText">Belopp: </string>
    <string name="priceText">Pris: </string>
    <string name="btnSave">Spara</string>
    <string name="addIncomeText">Fyll i formuläret och tryck på spara för att lägga till en ny inkomst.</string>
    <string name="addExpenseText">Fyll i formuläret och tryck på spara för att lägga till en ny utgift.</string>
    <string name="categoryGroceries">Livsmedel</string>
    <string name="categoryLeisure">Fritid</string>
    <string name="categoryTravel">Resor</string>
    <string name="categoryLiving">Boende</string>
    <string name="categoryPay">Lön</string>
    <string name="categoryOther">Övrigt</string>
    <string name="etIncomeTitleHint">T.ex. Månadslön</string>
    <string name="etExpenseTitleHint">T.ex. Pizza</string>
    <string name="etAmountHint">T.ex. 12900</string>
    <string name="etPriceHint">T.ex. 69.90</string>
    <string name="tvKronor">kr</string>
    <string name="errorAddNew">Fyll i samtliga fält</string>
    <string name="toastSaved">Sparat</string>
    <string name="tvDetailInfo">Detaljerad information:</string>
    <string name="tvTotalIncome">Totala inkomster: </string>
    <string name="tvTotalExpenses">Totala utgifter: </string>
    <string name="tvTotal">Totalt: </string>
    <string name="contentDescriptionPieChart">PieChart</string>
    <string name="tvOverViewGreen">Grön = Inkomster</string>
    <string name="tvOverviewRed">Röd = Utgifter</string>
    <string name="errorUserAlreadyExist">Användare finns redan</string>
    <string name="etFromDateHint">Från datum</string>
    <string name="etToDateHint">Till datum</string>

</resources>
