<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.mah.ad0025.inluppg1.MenuFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:text="@string/tvMenuText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAddIncome"/>
        <Button
            android:id="@+id/btnAddExpense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAddExpense"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnOverview"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnOverview"/>
    <Button
        android:id="@+id/btnSeeIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSeeIncome"/>
    <Button
        android:id="@+id/btnSeeExpenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSeeExpenses"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvConnectedUser"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <se.mah.ad0025.inluppg1.CustomButton
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogout"/>
    </LinearLayout>
</LinearLayout>
