<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="se.mah.ad0025.inluppg1.CreateFragment">

    <EditText
        android:id="@+id/etFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etFirstnameHint"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/etLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etLastnameHint"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/btnCreate"/>

</LinearLayout>
